# luca-on-the-web

./: .gitignore  CNAME  Gemfile  README.md  Rakefile  app.vue  config.rb  config.ru  error.vue  eslint.config.mjs  index.html  install.sh  nitro.config.ts  nuxt.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  scholar_publications.json  sitemap.xml  spell.txt  tailwind.config.js  vitest.config.ts  wranger.toml  wrangler.jsonc
.github/: dependabot.yml
404/: index.html
assets/: scholar_publications.json
assets/css/: main.css  (+1 more)
blog/: feed.xml  index.html
components/: CardComponent.vue  FeaturedProjectsCard.vue  FlyingElement.vue  FlyingElementsContainer.vue  GameOfLife.vue  HighlightAuthor.vue  Navbar.vue  NavbarUnderline.vue  PageTransition.vue  SwipeHandler.vue
css/: blog-b2fa52a7.css  main-2455a29c.css  main-b33277d3.css  main-f8669ee4.css  resume-0e118132.css  resume-63a8da05.css  resume-bd5d3f41.css  resume-f2da0ee6.css  syntax-a9071308.css
health/: index.html
js/: blog.js  main.js
layouts/: default.vue
lib/: resume.rb
pages/: committees.vue  cv.vue  index.vue  projects.vue  publications.vue
scripts/: README.md  main.py  pyproject.toml  run.sh  test.sh
scripts/scholar/: caching.py  fetching.py  parsing.py  transforming.py
scripts/test/: __init__.py  test_caching.py  test_parsing.py  test_transforming.py
source/: 404.html  CNAME  environment_variables.rb  health.html  index.html.haml  robots.txt
stores/: committees.ts  cv.ts  open_graph.ts  projects.ts  publications.ts  talks
test/: cv-page.test.ts  cv-store.test.ts  setup.ts  (+1 more)
(+78 files in other folders)
