[project]
name = "scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pytest>=8.3.5",
    "rich>=14.0.0",
    "scholarly>=1.7.11",
]

[project.scripts]
scholar-sync = "scholar_sync:main"

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = "test_*.py"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
