[project]
name = "scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "jsonschema>=4.23.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "rich>=14.0.0",
    "scholarly>=1.7.11",
    "tqdm>=4.67.1",
]

[project.scripts]
scholar-sync = "scholar_sync:main"

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = "test_*.py"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
